# strategies

./: .gitignore
alphaworks/: README.md  pyproject.toml
alphaworks/alphaworks/: __init__.py  backtest.py  config.py  data.py  indicators.py  longport_client.py  pipeline.py  plotting.py
alphaworks/alphaworks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alphaworks/alphaworks/strategies/: __init__.py  base.py  dutbot_indicator.pine  ema_cross.pine  indicator+utbot+ema.pine  kama_cloud_st.pine  run.txt  supertrend.py  test.pine  turtle.py  utbot+ema.pine  utbot.pine  utbot_a.pine  utbot_line.pine  utbot_strategy.py
alphaworks/alphaworks/strategies/ai/: stock_deepseek_indicators_plus.py  stock_deepseek_market_indicators_plus.py  stock_deepseek_ok_plus_live.py  stock_deepseek_strategy.py
alphaworks/artifacts/: deepseek_market_sentiment_cache.json  deepseek_ok_plus_cache.json  fontlist-v390.json  stock_deepseek_ai.csv  stock_deepseek_ok_plus.csv  turtle.csv  utbot.csv
alphaworks/docs/: design.md
alphaworks/scripts/: run_backtest.py  run_stock_deepseek_market_sentiment.sh  run_stock_deepseek_ok_plus.sh  run_utbot.sh
alphaworks/strategies/: utbot_live.py
lorentz_knn/: README.md  pyproject.toml
lorentz_knn/artifacts/: data.csv  lorentz_knn_trades.csv
lorentz_knn/lorentz_knn/: __init__.py  backtest.py  config.py  data.py  features.py  filters.py  indicator.py  knn.py  longport_client.py  pipeline.py  plotting.py  utils.py
lorentz_knn/lorentz_knn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lorentz_knn/scripts/: run_backtest.py
lorentz_knn/tradingview/: lorentz.pine
others/: bbw估波.txt  xo_macd.txt  动量趋势策略.txt  呱叔tv原版.txt  抛物线反转.txt  波浪趋势指标（配合网格有奇效）.txt  超级趋势rsi半成品哈.txt
supertrend/: README.md  pyproject.toml
supertrend/artifacts/: trades.csv
supertrend/docs/: design.md
supertrend/scripts/: run_backtest.py
supertrend/supertrend/: __init__.py  backtest.py  config.py  pipeline.py  plotting.py
supertrend/supertrend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+16 files in other folders)
