[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorentz-knn"
version = "0.1.0"
description = "Lorentzian KNN strategy backtest inspired by the TradingView script."
authors = [
  { name = "Shawn", email = "shawn@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "longport>=3.0.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pandas-ta>=0.3.14b0",
  "pydantic>=1.10.0,<2.0",
  "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "black",
  "isort"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lorentz_knn"]
